bug 159998 - type named anchor in URL bar, hit Enter - focus/selection appears to stay. r=bryner, sr=jst